# personal-mail-mcp

./: .gitignore  NOTES.md  README.md  pyproject.toml
config/: accounts.example.toml  auth.example.toml  mail_rules.default.toml  mail_rules.example.toml
skills/email-appointment-harvest/: SKILL.md
skills/email-appointment-harvest/agents/: openai.yaml
skills/inbox-triage/: SKILL.md
skills/inbox-triage/agents/: openai.yaml
skills/inbox-triage/references/: rules.md
skills/missed-mail-review/: SKILL.md
skills/missed-mail-review/agents/: openai.yaml
skills/review-all-mail/: SKILL.md
skills/review-all-mail/agents/: openai.yaml
src/personal_mail_mcp/: __init__.py  auth.py  calendar.py  cli.py  config.py  google.py  mail_audit.py  microsoft.py  server.py
tests/: test_mail_audit.py
