[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-mail-mcp"
version = "0.1.0"
description = "Local MCP server for Codex mail and calendar access."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
providers = [
  "msal>=1.31.0",
  "google-api-python-client>=2.140.0",
  "google-auth-oauthlib>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
